--- a/new.html
+++ b/new.html
@@ -175,11 +175,12 @@ function sendMessage() {
         userInput.value = '';
 
         if (userMessage.toLowerCase() === '!specs') {
-            addMessage('[Entity] ' + timestamp, 'Server Status: OPERATIONAL');
-            addMessage('CPU: Intel® Xeon® W3-2423 (15 MB cache, 6 cores, 12 threads, 2.1 GHz to 4.2 GHz Turbo, 120 W)');
-            addMessage('OS: Ubuntu® Linux® 22.04');
-                        addMessage('GPU: NVIDIA® T1000, 8 GB GDDR6');
-                        addMessage('RAM: 64 GB: 2 x 32 GB, DDR5, 4800 MT/s, RDIMM, ECC');
+addMessage('[Entity] ' + timestamp, 'Server Status: OPERATIONAL');
+addMessage('[Entity] ' + timestamp, 'CPU: Intel® Xeon® W3-2423 (15 MB cache, 6 cores, 12 threads, 2.1 GHz to 4.2 GHz Turbo, 120 W)');
+addMessage('[Entity] ' + timestamp, 'OS: Ubuntu® Linux® 22.04');
+addMessage('[Entity] ' + timestamp, 'GPU: NVIDIA® T1000, 8 GB GDDR6');
+addMessage('[Entity] ' + timestamp, 'RAM: 64 GB: 2 x 32 GB, DDR5, 4800 MT/s, RDIMM, ECC');
+
         } else if (userMessage.toLowerCase().startsWith('!exec')) {
             const command = userMessage.substring(5).trim();
             if (command === 'hfsmun.org login_wixsite') {
