--- a/Temporary_Website/index.html
+++ b/Temporary_Website/index.html
@@ -3,109 +3,81 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ASCII Art Website</title>
+    <title>Fullscreen ASCII Art Animation</title>
     <style>
-        body {
+        body, html {
             margin: 0;
             padding: 0;
-            overflow-x: hidden;
-            background-color: #111;
-            color: #fff;
-            font-family: 'Consolas', monospace;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-        }
-
-        .moving-text {
-            position: absolute;
             width: 100%;
-            height: 100vh;
+            height: 100%;
             display: flex;
             justify-content: center;
             align-items: center;
+            background: black;
+            color: white;
+            font-family: "Consolas", "Courier New", monospace;
             overflow: hidden;
-            z-index: 1;
+            transition: background 1s ease-in-out;
         }
 
-        .moving-text p {
-            animation: moveText 10s linear infinite;
-            font-size: 1.5rem;
-            opacity: 0.2;
+        #container {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            text-align: center;
+            white-space: pre;
+            transition: width 1s ease-in-out, height 1s ease-in-out, border-radius 1s ease-in-out;
+        }
+
+        #asciiArt {
+            font-size: 2vw;
+            line-height: 1.2;
         }
 
         @keyframes moveText {
-            0% {
-                transform: translateY(100vh);
-            }
-            100% {
-                transform: translateY(-100vh);
-            }
+            0% { transform: translate(0, 0) scale(1); }
+            25% { transform: translate(10px, -10px) scale(1.1); }
+            50% { transform: translate(-10px, 10px) scale(1); }
+            75% { transform: translate(5px, -5px) scale(1.1); }
+            100% { transform: translate(0, 0) scale(1); }
         }
 
-        .ascii-box {
-            position: relative;
-            z-index: 2;
-            padding: 20px;
-            border: 2px solid #fff;
+        .animated {
+            animation: moveText 3s infinite;
+        }
+
+        .shrinked {
+            width: 60%;
+            height: auto;
             border-radius: 15px;
-            background-color: rgba(0, 0, 0, 0.8);
-            text-align: center;
-            font-size: 1.2rem;
-        }
-
-        .container {
-            width: 100%;
-            height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            transition: all 0.5s ease;
-        }
-
-        .shrink {
-            width: 80%;
-            height: 80vh;
-        }
-
-        @media (max-width: 768px) {
-            .ascii-box {
-                font-size: 0.8rem;
-            }
         }
     </style>
 </head>
 <body>
 
-    <div class="moving-text">
-        <p>Random Text Moving and Forming Designs...</p>
-    </div>
-
-    <div class="container" id="contentContainer">
-        <div class="ascii-box">
-            <pre>
+    <div id="container" class="animated">
+        <pre id="asciiArt">
              _____ _       _____ 
      /\    / ____| |     / ____|
     /  \  | (___ | |    | (___  
    / /\ \  \___ \| |     \___ \ 
   / ____ \ ____) | |____ ____) |
  /_/    \_\_____/|______|_____/ 
-            </pre>
-        </div>
+        </pre>
     </div>
 
     <script>
-        window.addEventListener('scroll', function() {
-            const container = document.getElementById('contentContainer');
-            const movingText = document.querySelector('.moving-text p');
+        document.addEventListener('scroll', function() {
+            const container = document.getElementById('container');
+            const scrollPosition = window.scrollY;
 
-            if (window.scrollY > 50) {
-                container.classList.add('shrink');
-                movingText.style.animationPlayState = 'paused';
+            if (scrollPosition > 0) {
+                container.classList.add('shrinked');
+                container.classList.remove('animated');
             } else {
-                container.classList.remove('shrink');
-                movingText.style.animationPlayState = 'running';
+                container.classList.remove('shrinked');
+                container.classList.add('animated');
             }
         });
     </script>
