--- a/Temporary_Website/index.html
+++ b/Temporary_Website/index.html
@@ -13,7 +13,6 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            height: 100vh;
             background-color: #f4f4f4;
             color: #333;
             overflow-x: hidden;
@@ -21,9 +20,16 @@
 
         h1 {
             white-space: pre;
-            font-size: 1.5rem;
+            font-size: 2rem;
             text-align: center;
             margin: 0;
+        }
+
+        .full-screen {
+            height: 100vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
 
         .fade-in {
@@ -43,10 +49,26 @@
             line-height: 1.6;
         }
 
+        section h2 {
+            font-size: 1.5rem;
+            margin-bottom: 20px;
+        }
+
         footer {
             margin-top: 50px;
-            font-size: 0.9rem;
+            font-size: 1.1rem;
             text-align: center;
+        }
+
+        .credit-name {
+            font-size: 1.2rem;
+            font-weight: bold;
+        }
+
+        .credit-role {
+            font-size: 0.9rem;
+            font-style: italic;
+            color: #555;
         }
 
         @keyframes typing {
@@ -79,29 +101,35 @@
 </head>
 <body>
 
-<h1 class="typewriter">
-             _____ _       _____ <br>
-     /\    / ____| |     / ____|<br>
-    /  \  | (___ | |    | (___  <br>
-   / /\ \  \___ \| |     \___ \ <br>
-  / ____ \ ____) | |____ ____) |<br>
- /_/    \_\_____/|______|_____/ <br>
-</h1>
+<div class="full-screen">
+    <h1 class="typewriter">
+        _____ _       _____ <br>
+         /\    / ____| |     / ____|<br>
+        /  \  | (___ | |    | (___  <br>
+       / /\ \  \___ \| |     \___ \ <br>
+      / ____ \ ____) | |____ ____) |<br>
+     /_/    \_\_____/|______|_____/ <br>
+    </h1>
+</div>
 
 <section class="fade-in" id="info">
+    <h2>About the Project</h2>
     <p>This project is a collaborative effort focused on creating innovative solutions to real-world problems. Our team is dedicated to pushing the boundaries of technology, creativity, and human potential.</p>
 </section>
 
-<footer id="credits" class="fade-in">
-    <p>Credits:</p>
-    <ul>
-        <li>John Doe - Lead Developer</li>
-        <li>Jane Smith - Project Manager</li>
-        <li>Bob Johnson - Designer</li>
-    </ul>
-</footer>
+<section class="fade-in" id="credits">
+    <div class="credit-name">John Doe</div>
+    <div class="credit-role">Lead Developer</div>
+    <br>
+    <div class="credit-name">Jane Smith</div>
+    <div class="credit-role">Project Manager</div>
+    <br>
+    <div class="credit-name">Bob Johnson</div>
+    <div class="credit-role">Designer</div>
+</section>
 
-<section id="contribute" class="fade-in">
+<section class="fade-in" id="contribute">
+    <h2>Contribute</h2>
     <p>We're a small, self-funded, fully-distributed team and we're actively hiring!<br><br>
 
     Come help us scale, explore, and build humanist infrastructure focused on amplifying the human mind and spirit.<br><br>
@@ -111,8 +139,9 @@
     We look forward to hearing from you.</p>
 </section>
 
-<section id="contact" class="fade-in">
-    <p>Contact us at: <a href="mailto:team@example.com">team@example.com</a></p>
+<section class="fade-in" id="contact">
+    <h2>Contact Us</h2>
+    <p>Email us at: <a href="mailto:team@example.com">team@example.com</a></p>
 </section>
 
 <script>
